--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,21 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            black: "black",
+            sky800: "#084C97",
+            neutral600: "#545454",
+            white: "FFFFFF",
+          },
+        },
+      },
+    }
+  </script>
 </head>
 <body>
   <app-root></app-root>
