--- a/src/index.html
+++ b/src/index.html
@@ -23,5 +23,7 @@
 </head>
 <body>
   <app-root></app-root>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
 </body>
 </html>
