Add products to homepage

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://kit.fontawesome.com/ecb918b976.js" crossorigin="anonymous"></script>
   <script>
     tailwind.config = {
       theme: {
@@ -21,7 +22,7 @@
     }
   </script>
 </head>
-<body>
+<body class="font-['Poppins']">
   <app-root></app-root>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
