--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     }
   </script>
 </head>
-<body class="font-sans">
+<body class="font-sans overscroll-none">
   <app-root></app-root>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
